--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 
 {% include head.html %}
+{% include appstoreimages.html %}
 
 <body>
     <div class="imageWrapper">
@@ -19,8 +20,8 @@
                         <div class="videoContainer hidden">
                             <video class="screenvideo" autoplay="autoplay" controls="controls">
                             </video>
-                        </div>  
-                        
+                        </div>
+
                         <img class="iphoneScreen hidden" src="" alt="">
 
                         {% include screencontent.html %}
