playing around with default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,6 @@
 <html lang="en-us">
 
 {% include head.html %}
-{% include header.html %}
-{% include appstoreimages.html %}
 
 <body>
     <div class="imageWrapper">
@@ -37,7 +35,7 @@
                                     </clipPath>
                                 </defs>
                             </svg>
-                            <img class="appIconLarge" src="{{ site.app_icon }}">
+                            <img class="appIconLarge" src="assets/appicon.png">
                         </div>
                         <div class="appNamePriceContainer">
                             <h1 class="appName">
